--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,158 @@
 @charset "UTF-8";
+/*共通部分*/
+html{
+	font-size: 100%;
+}
+
+body{
+	background-image: url(../images/backjpg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	line-height: 1.7;
+	color: #4d5156;
+}
+
+footer{
+	background-color: #b7aea7;
+}
+
+/*ヘッダー*/
+.page-header{
+	background-color: #97bbd3;
+	height: 200px;
+}
+/*.wrapper{
+	max-width: 1120px;
+	margin: auto;
+	padding: 0 1.5rem;
+}*/
+h1{
+	font-family: 'arial black';
+	text-align: center;
+	font-size: 100px;
+	font-weight: lighter;
+}
+/*.main-nav{*/
+/*	display: flex;*/
+/*	list-style: none;*/
+/*	justify-content: flex-end;*/
+/*	gap: 2.5rem;*/
+/*	font-size: 1, 5rem;*/
+/*}*/
+
+/*メイン*/
+
+.profile{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+.item00{
+	background-color: #F2EDEA;
+	margin: 10px;
+	padding: 10px;
+	box-shadow: 10px 10px 15px -10px;
+}
+.profile h3{
+	text-align: center;
+}
+.profile p{
+	text-align: center;
+}
+/*スキル*/
+#main{
+	max-width: 1120px;
+	margin: auto;
+	padding: 0 1.5rem;
+}
+
+#main h2{
+	font-family: Impact;
+	text-align: center;
+	font-size: 70px;
+	margin-top: 100px;
+}
+.skil{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+.item01{
+	background-color: #F2EDEA;
+	margin: 10px;
+	padding: 10px;
+	box-shadow: 10px 10px 15px -10px;
+}
+.skil h3{
+	text-align: center;
+}
+
+/*ワーク*/
+.works{
+	margin-top: 50px;
+}
+.title{
+	background-color: #F2EDEA;
+	margin: 10px;
+	padding: 10px;
+	border-radius: 16px;
+	width: 210px;
+	height: 70px;
+	box-shadow: 10px 10px 15px -10px;
+	text-align: center;
+	font-size: 20px;
+	padding-top: 40px;
+	font-weight: bold;
+}
+
+.works p{
+	font-size: 18px;
+	margin: 25px 0 0 20px;
+}
+.item02{
+	display: flex;
+	flex-wrap: wrap;
+}
+.item03{
+	display: flex;
+	flex-wrap: wrap;
+}
+.item04{
+	display: flex;
+	flex-wrap: wrap;
+}
+.item05{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+/*フッター*/
+
+.info {
+	width: 100%;
+	max-width: 544px;
+	margin: auto;
+	padding: 0 1.5rem;
+	border-spacing: 0;
+}
+
+.info th,
+.info td {
+	border-bottom: 1px solid #c9c2bc;
+}
+
+.info th {
+	text-align: left;
+	font-weight: normal;
+	padding: 1rem;
+}
+
+.info td {
+	padding: 1rem 0;
+}
+.page-footer h3{
+	text-align: center;
+	font-size: 50px;
+	margin-top: 100px;
+}
+.copyright{
+	text-align: center;
+}
